Normalize line endings

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Panda Commerce</title>
 
-  <link rel="stylesheet" href="Panda-Commerce.css">
+  <link rel="stylesheet" href="style.css">
 
   <link rel="shortcut icon" href="https://img.icons8.com/?size=96&id=tpfCW2vDaYKA&format=png" type="image/x-icon">
 
